--- a/cf.yml
+++ b/cf.yml
@@ -24,7 +24,7 @@ Resources:
       KeyName:  oregonkeypair
       SecurityGroupIds: 
         - !Ref gocontainersecgrp
-#      IamInstanceProfile: RoleForTestingRoles
+      IamInstanceProfile: go_cf_pwsh_gs
       UserData:
         Fn::Base64:
           Fn::Join:
