--- a/cf.yml
+++ b/cf.yml
@@ -13,6 +13,8 @@ Parameters:
     Type: String
   keypair:
     Type: String
+  instancerole:
+    Type: String    
 Resources:
   gocontainersecgrp:
     Type: AWS::EC2::SecurityGroup
@@ -30,7 +32,7 @@ Resources:
       KeyName:  !Ref keypair
       SecurityGroupIds: 
         - !Ref gocontainersecgrp
-      IamInstanceProfile: go_cf_pwsh_gs
+      IamInstanceProfile: !Ref instancerole
       UserData:
         Fn::Base64:
           Fn::Join:
